--- a/테스트_코어_실행가이드.md
+++ b/테스트_코어_실행가이드.md
@@ -1,28 +1,58 @@
-# 🎯 핵심 테스트 실행 가이드 (Docker 기반)
+#  테스트 실행 가이드 (Docker 기반)
 
-## 📌 개요
+## 개요
 
-이 문서는 3가지 핵심 테스트**를 설명합니다.
-
----
-
-## 📁 테스트 파일
-
-- **위치**: `stores/test_core.py`
-- **테스트 수**: 15개 (확장성 5 + E2E 5 + Docker 4 + 요약 1)
+이 문서는 **Unit Test**와 **Core Test**의 상세 설명 및 실행 가이드를 제공합니다.
 
 ---
 
-## 🚀 실행 방법 (Docker)
+## 테스트 피라미드
+
+```
+                  /\
+                 /  \
+                / E2E \           ← test_core.py (느리지만 신뢰도 높음)
+               /______\
+              /        \
+             /Integration\        ← test_core.py의 일부
+            /____________\
+           /              \
+          /   Unit Tests   \      ← test_unit.py (빠르고 많음)
+         /__________________\
+```
+
+| 파일 | 테스트 유형 | 특징 |
+|------|------------|------|
+| `test_unit.py` | 단위 테스트 (Unit Test) | 빠름, 독립적, DB Mock 포함 |
+| `test_core.py` | 코어 / 통합 테스트 | 느림, **서울 '구'별 경계선 & 최적 반경 테스트** , 외부 API 호출, 전체 흐름 검증 |
+
+---
+
+## 📁 테스트 파일 위치
+
+| 파일 | 경로 | 테스트 수 |
+|------|------|----------|
+| **Unit Test** | `stores/test_unit.py` | 18개 |
+| **Core Test** | `stores/test_core.py` | 12개 (**서울 '구'별 경계선 & 최적 반경 테스트** 3 + E2E 5 + Docker 4) |
+
+---
+
+##  실행 방법 (Docker)
 
 ### 1. 전체 테스트 실행
 ```bash
-docker compose exec web python manage.py test stores.test_core -v 2
+# Unit Test + Core Test 전체 실행
+docker compose exec web python manage.py test stores -v 2
 ```
 
-### 2. 개별 카테고리 실행
+docker compose exec web python manage.py test stores.test_unit -v 2
+```
+
+### 3. Core Test만 실행
 ```bash
-# 확장성 테스트만
+docker compose exec web python manage.py test stores.test_core -v 2
+```bash
+# 서울 '구'별 경계선 & 최적 반경 테스트만
 docker compose exec web python manage.py test stores.test_core.ScalabilityTests -v 2
 
 # E2E 통합 테스트만
@@ -32,51 +62,91 @@ docker compose exec web python manage.py test stores.test_core.EndToEndIntegrati
 docker compose exec web python manage.py test stores.test_core.DockerReproducibilityTests -v 2
 ```
 
-### 3. 기존 테스트(tests.py)와 함께 실행
-```bash
-# 모든 stores 테스트 실행
-docker compose exec web python manage.py test stores -v 2
-```
+---
+
+## 📊 Unit Test 상세 (test_unit.py)
+
+### 테스트 개요
+
+| 테스트 클래스 | 테스트 유형 | 설명 | 결과 확인 |
+|--------------|------------|------|----------|
+| `ModelIntegrityTests` | 모델 테스트 | 모델 CRUD 기본 동작 테스트 | 각 모델(편의점, 다이소, 인허가)이 정상 생성되는지 확인 |
+| `DuplicatePreventionTests` | 제약조건 테스트 | 데이터베이스 unique 제약조건 테스트 | 중복 place_id 저장 시 `IntegrityError` 발생 여부 |
+| `CoordinateValidityTests` | 데이터 유효성 테스트 | 좌표 데이터 범위 검증 | 좌표가 서울 범위(위도 37.4~37.7, 경도 126.7~127.2) 내인지 확인 |
+| `StoreClosureTests` | 비즈니스 로직 테스트 | 폐업 판별 로직 테스트 | 폐업률 계산(정상 8, 폐업 2 → 20%) 정확성 검증 |
+| `APIViewTests` | 통합 API 테스트 | API 엔드포인트 테스트 | HTTP 200 응답, JSON 구조, 에러 핸들링 확인 |
+| `DataQualityTests` | 데이터 품질 테스트 | 데이터 품질 검증 테스트 | 중복률 0%, 필수 필드 존재, 주소에 '서울' 포함 확인 |
+| `PerformanceBenchmarkTests` | 성능 테스트 | 성능 벤치마크 테스트 | 1000개 데이터 생성 < 1초, 공간 쿼리 < 0.1초 |
+| `ExceptionHandlingTests` | 예외 처리 테스트 | 에러 시나리오 테스트 | 중복 실행 시 "이미 수집이 진행 중입니다" 에러 반환 |
+
+### Unit Test 항목 상세
+
+| # | 테스트 메서드 | 검증 내용 | 통과 조건 |
+|---|-------------|----------|----------|
+| 1 | `test_convenience_store_creation` | 편의점 모델 생성 | name, place_id 일치 |
+| 2 | `test_daiso_creation` | 다이소 모델 생성 | name 일치 |
+| 3 | `test_restaurant_license_creation` | 휴게음식점 인허가 생성 | mgtno 일치 |
+| 4 | `test_tobacco_license_creation` | 담배소매업 인허가 생성 | mgtno 일치 |
+| 5 | `test_convenience_duplicate_place_id_rejected` | 중복 place_id 차단 | IntegrityError 발생 |
+| 6 | `test_daiso_duplicate_id_rejected` | 중복 daiso_id 차단 | IntegrityError 발생 |
+| 7 | `test_restaurant_license_duplicate_mgtno_rejected` | 중복 mgtno 차단 | IntegrityError 발생 |
+| 8 | `test_coordinate_within_seoul_range` | 좌표 서울 범위 검증 | 37.4 ≤ lat ≤ 37.7, 126.7 ≤ lng ≤ 127.2 |
+| 9 | `test_all_existing_stores_have_valid_coordinates` | 전체 좌표 유효성 | 범위 밖 좌표 0개 |
+| 10 | `test_location_not_null` | NULL 좌표 검사 | NULL 좌표 0개 |
+| 11 | `test_closure_result_creation` | 폐업 결과 생성 | 상태값(정상/폐업) 일치 |
+| 12 | `test_closure_status_choices` | 상태값 선택지 | 정상/폐업만 허용 |
+| 13 | `test_closure_statistics` | 폐업률 통계 | 80% 정상, 20% 폐업 정확 계산 |
+| 14 | `test_collector_view_accessible` | 수집 UI 접근 | HTTP 200 |
+| 15 | `test_start_collection_without_api_keys` | API 키 누락 처리 | success: false, error 포함 |
+| 16 | `test_check_status_endpoint` | 상태 확인 API | running, progress, completed 포함 |
+| 17 | `test_bulk_creation_performance` | 대량 생성 성능 | 1000개 < 1초 |
+| 18 | `test_duplicate_execution_prevented` | 중복 실행 차단 | "이미 수집이 진행 중" 에러 |
 
 ---
 
-## 📊 테스트 항목
+## 📊 Core Test 상세 (test_core.py)
 
-### 1️⃣ 확장성 테스트 (5개)
+### 테스트 개요
 
-| # | 테스트 | 검증 내용 |
-|---|--------|----------|
-| 1 | `test_1_all_25_gu_codes_exist` | 25개 구 코드 매핑 확인 |
-| 2 | `test_2_all_gu_have_valid_api_codes` | API 서비스명 유효성 |
-| 3 | `test_3_different_gu_data_simulation` | 다른 구 시뮬레이션 |
-| 4 | `test_4_boundary_address_validation` | 구 경계 정확성 |
-| 5 | `test_5_api_call_estimation` | API 호출/비용 분석 |
+| 테스트 클래스 | 테스트 유형 | 설명 | 결과 확인 |
+|--------------|------------|------|----------|
+| `ScalabilityTests` | 서울 '구'별 경계선 & 최적 반경 테스트 | 총 25개 구 최적 반경 검증 | 25개 구 코드 매핑, 100% 커버리지 최소 반경, API 비용 분석 |
+| `EndToEndIntegrationTests` | E2E 통합 테스트 | 전체 파이프라인 시뮬레이션 | 5단계 파이프라인 순서, 데이터 일관성 검증 |
+| `DockerReproducibilityTests` | 환경 테스트 | Docker 환경 재현성 검증 | 환경변수, 의존성, DB 연결, 마이그레이션 상태 |
+
+### 1️⃣ 서울 '구'별 경계선 & 최적 반경 테스트  (3개)
+
+| # | 테스트 | 검증 내용 | 통과 조건 |
+|---|--------|----------|----------|
+| 1 | `test_1_all_25_gu_codes_exist` | 25개 구 코드 매핑 확인 | 25개 구 전체 존재 |
+| 2 | `test_2_boundary_address_validation` | 구 경계 정확성 + 최소 반경 산출 | 평균 커버리지 ≥ 70% |
+| 3 | `test_3_api_call_estimation` | API 호출/비용 분석 | 무료 범위 내 (카카오 < 100,000, 서울시 < 10,000) |
 
 ### 2️⃣ E2E 통합 테스트 (5개)
 
-| # | 테스트 | 검증 내용 |
-|---|--------|----------|
-| 1 | `test_1_pipeline_stage_order` | 파이프라인 5단계 |
-| 2 | `test_2_simulated_daiso_collection` | 다이소 수집 |
-| 3 | `test_3_simulated_convenience_collection` | 편의점 수집 |
-| 4 | `test_4_simulated_openapi_collection` | OpenAPI 수집 |
-| 5 | `test_5_data_consistency_check` | 데이터 일관성 |
+| # | 테스트 | 검증 내용 | 통과 조건 |
+|---|--------|----------|----------|
+| 1 | `test_1_pipeline_stage_order` | 파이프라인 5단계 순서 | 5단계 확인 |
+| 2 | `test_2_simulated_daiso_collection` | 다이소 수집 시뮬레이션 | 16개 생성 |
+| 3 | `test_3_simulated_convenience_collection` | 편의점 수집 시뮬레이션 | 100개 생성 |
+| 4 | `test_4_simulated_openapi_collection` | OpenAPI 수집 시뮬레이션 | 휴게음식점 50개, 담배소매업 30개 |
+| 5 | `test_5_data_consistency_check` | 데이터 일관성 검증 | 모든 편의점에 폐업결과 존재 |
 
 ### 3️⃣ Docker 재현성 테스트 (4개)
 
-| # | 테스트 | 검증 내용 |
-|---|--------|----------|
-| 1 | `test_1_required_environment_variables` | 환경 변수 |
-| 2 | `test_2_required_dependencies` | 필수 패키지 |
-| 3 | `test_3_database_connection` | DB + PostGIS |
-| 4 | `test_4_model_migrations` | 마이그레이션 |
+| # | 테스트 | 검증 내용 | 통과 조건 |
+|---|--------|----------|----------|
+| 1 | `test_1_required_environment_variables` | 환경 변수 확인 | DATABASE_URL 등 필수 변수 존재 |
+| 2 | `test_2_required_dependencies` | 필수 패키지 확인 | Django, requests 등 import 성공 |
+| 3 | `test_3_database_connection` | DB + PostGIS 연결 | 연결 성공, PostGIS 활성화 |
+| 4 | `test_4_model_migrations` | 마이그레이션 상태 | 모든 모델 테이블 존재 |
 
 ---
 
 ## 💰 API 비용 분석
 
-| API | 25개 구 | 일일 한도 | 사용률 |
-|-----|---------|----------|--------|
+| API | 25개 구 예상 | 일일 한도 | 사용률 |
+|-----|-------------|----------|--------|
 | **카카오 REST** | ~5,000회 | 100,000건 | **5%** |
 | **서울시 OpenAPI** | 50회 | 10,000회 | **0.5%** |
 
@@ -86,6 +156,13 @@ docker compose exec web python manage.py test stores -v 2
 
 ## 📋 예상 출력
 
+### Unit Test 결과
+```
+Ran 18 tests in 2.XXXs
+OK
+```
+
+### Core Test 결과
 ```
 ======================================================================
 📊 코어 테스트 결과 요약
@@ -94,14 +171,14 @@ docker compose exec web python manage.py test stores -v 2
 ┌──────────────────────────────┬────────────┬────────────────────┐
 │ 카테고리                       │  테스트 수  │         결과        │
 ├──────────────────────────────┼────────────┼────────────────────┤
-│ 확장성 테스트                   │     5개    │      ✅ 모두 통과    │
+│ 서울'구'별 경계선&최적반경 테스트│    3개│     ✅ 모두 통과   │
 │ E2E 통합 테스트                │     5개    │      ✅ 모두 통과    │
 │ Docker 재현성 테스트            │     4개    │      ✅ 모두 통과    │
 ├──────────────────────────────┴────────────┴────────────────────┤
-│ 📈 총 테스트: 14개 | 전체 결과: ✅ 모두 통과                        │
+│ 📈 총 테스트: 12개 | 전체 결과: ✅ 모두 통과                        │
 └─────────────────────────────────────────────────────────────────┘
 
-Ran 15 tests in 1.409s
+Ran 13 tests in X.XXXs
 OK
 ```
 
@@ -109,12 +186,19 @@ OK
 
 ## ✅ 성공 기준
 
+### Unit Test
 ```
-Ran 15 tests in X.XXXs
+Ran 18 tests in X.XXXs
+OK
+```
+
+### Core Test
+```
+Ran 13 tests in X.XXXs
 OK
 ```
 
 ---
 
-**작성일**: 2026-01-21  
-**버전**: v2.0
+**작성일**: 2026-01-22  
+**버전**: v2.1
